<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_f101_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gibson.wallthickness.F101_3">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PP"
        android:id="@+id/Pro"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/DP_num"
        android:layout_below="@+id/Pro"
        android:hint="@string/DP"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/spin_pressure"
        android:entries="@array/pressure_items"
        android:layout_below="@+id/Pro"
        android:layout_alignParentEnd="true"
        android:theme="@style/AppTheme.Spinner"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/DT_num"
        android:layout_below="@+id/DP_num"
        android:hint="@string/DT"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/spin_DT"
        android:entries="@array/temp_items"
        android:layout_below="@+id/spin_pressure"
        android:layout_alignParentEnd="true"
        android:theme="@style/AppTheme.Spinner"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/IT_num"
        android:layout_below="@+id/DT_num"
        android:hint="@string/IT"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/spin_IT"
        android:entries="@array/temp_items"
        android:layout_below="@+id/spin_DT"
        android:layout_alignParentEnd="true"
        android:theme="@style/AppTheme.Spinner"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/LAT_num"
        android:layout_below="@+id/IT_num"
        android:hint="@string/LAT"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/spin_LAT"
        android:entries="@array/el_items"
        android:layout_below="@+id/spin_IT"
        android:layout_alignParentEnd="true"
        android:theme="@style/AppTheme.Spinner"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/Dens_num"
        android:layout_below="@+id/LAT_num"
        android:hint="@string/Density"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/spin_Dens"
        android:entries="@array/dens_items"
        android:layout_below="@+id/spin_LAT"
        android:layout_alignParentEnd="true"
        android:theme="@style/AppTheme.Spinner"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/Ratio_num"
        android:layout_below="@+id/Dens_num"
        android:hint="@string/pressureRatio"/>

    <Button
        android:text="@string/proButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Ratio_num"
        android:layout_marginTop="34dp"
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="onProButtonClick"/>
</RelativeLayout>
