<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_f2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gibson.wallthickness.F101">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PG"
        android:id="@+id/Geo"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/OD_num"
        android:layout_below="@+id/Geo"
        android:hint="@string/OD"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/spin_OD"
        android:entries="@array/OD_items"
        android:layout_below="@+id/Geo"
        android:layout_alignParentEnd="true"
        android:theme="@style/AppTheme.Spinner"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/corr_num"
        android:hint="@string/CA"
        android:layout_below="@+id/OD_num" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/spin_corr"
        android:entries="@array/OD_items"
        android:layout_below="@+id/spin_OD"
        android:layout_alignParentEnd="true"
        android:theme="@style/AppTheme.Spinner"/>

    <TextView
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:inputType="textNoSuggestions|textPersonName"
        android:text="Manufacturing Process"
        android:ems="10"
        android:id="@+id/manPro"
        android:gravity="center_vertical"
        android:layout_below="@id/corr_num" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/spin_manPro"
        android:entries="@array/process_items"
        android:layout_below="@+id/spin_corr"
        android:layout_alignParentEnd="true"
        android:theme="@style/AppTheme.Spinner"/>

    <TextView
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:inputType="textNoSuggestions|textPersonName"
        android:text="Type of Pipe"
        android:ems="10"
        android:id="@+id/pipeType"
        android:gravity="center_vertical"
        android:layout_below="@id/manPro" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/spin_pipeType"
        android:entries="@array/pipe_items"
        android:layout_below="@+id/spin_manPro"
        android:layout_alignParentEnd="true"
        android:theme="@style/AppTheme.Spinner"/>

    <TextView
        android:layout_width="145dp"
        android:layout_height="40dp"
        android:inputType="textNoSuggestions|textPersonName"
        android:text="Material Type"
        android:ems="10"
        android:id="@+id/matType"
        android:gravity="center_vertical"
        android:layout_below="@id/pipeType" />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/spin_matType"
        android:entries="@array/mat_items"
        android:layout_below="@+id/spin_pipeType"
        android:layout_alignParentEnd="true"
        android:theme="@style/AppTheme.Spinner"/>

    <Button
        android:text="Confirm Pipeline Geometry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/matType"
        android:layout_marginTop="34dp"
        android:id="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="onGeoButtonClick"/>
</RelativeLayout>
